Feature telegraf, and influxdb (#5)
* wip: influxdb-operator

* wip: influxdb-operator

* wip: influxdb-operator

* wip: influxdb-operator

* wip: influxdb-operator

* wip: prometheus_operator

* wip: raspberrypi change

* wip: raspberrypi change

* wip: raspberrypi change

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* working collect

* wip: prometheus_operator

* WIP: more collection scripts

* WIP: diff

* wip: more perf

* wip: perf kernel building

* WIP: more info

* wip: collect-info

* wip: collect-info

* wip: more debugging stuff

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: collect-info

* wip: fixed log collection

* WIP: before

* WIP: just more info

* WIP: perf

* WIP: fix certmanager

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: fix

* wip: cert-self-signed

* wip: fix

* wip: fix

* ca

* wip: fix

* wip: cert-self-signed

* wip: cert-manager - borglab

* wip: https://www.azul.com/jhiccup/

* wip: calico tuning

* wip: perf

* wip: profile-sysdig

* wip: fix calico

* wip: fix calico

* wip: fix calico

* wip: fix calico

* wip: debugger calico pod

* https://github.com/projectcalico/calico/issues/1709

* 

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,9 @@ badass.txt
 # secrets
 unifi-exporter-credentials.yaml
 unifi-exporter-secret-config.yaml
+logs.tar.gz
+kube.tar.gz
+ca.crt
+ca.key
+my-cluster-ca-key-pair-secret.yaml
+scaps
