--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -11,7 +11,7 @@ nfs_server_group: nfs_masters
 nfs_client_group: nfs_clients
 nfs_server_ip_override: 192.168.205.12
 k8_admin_config_dir: ~/dev/bossjones/bosslab-playbooks
-k8_admin_config_path: "{{k8_admin_config_dir}}/borg-admin.conf"
+k8_admin_config_path: "{{k8_admin_config_dir}}/vagrant-admin.conf"
 
 # export KUBECONFIG=~/dev/bossjones/bosslab-playbooks/borg-admin.conf
 
@@ -84,11 +84,17 @@ boss__echoserver__service__spec_selector: |
 
 boss__calico__manifest_path: "{{manifest_dir_path}}/calico"
 boss__calico__namespace_name: kube-system
-boss__calico__prometheus_metrics_enabled: true
+boss__calico__prometheus_metrics_enabled: false
+# NOTE: See https://docs.projectcalico.org/v3.5/usage/configuration/mtu for recomendations
+boss__calico__veth_mtu: 1480 # 1480,
+boss__calico__node_env_CALICO_IPV4POOL_IPIP: "Always"
+boss__calico__debugger_deployment_spec_replicas: 1
+boss__calico__debugger_enabled: "enabled"
 
 boss__calico__node_version: v3.3.2
 boss__calico__node_image_repo: "quay.io/calico/node"
 boss__calico__node_image_tag: "{{ boss__calico__node_version }}"
+
 
 boss__calico__cni_version: v3.3.2
 boss__calico__cni_image_repo: "quay.io/calico/cni"
@@ -98,18 +104,21 @@ boss__calico__enable_prometheus_exporter_servicemonitor: "enabled"
 
 boss__calico__prometheus_exporter_namespace_name: monitoring
 
+boss__calico__enable_prometheus_felix: "false" # false,enabled
 boss__calico__felix_PrometheusMetricsPort: 9091
 boss__calico__typha_PrometheusMetricsPort: 9093
+
 
 boss__calico__node_daemonset_annotations: |
   scheduler.alpha.kubernetes.io/critical-pod: ''
   prometheus.io/scrape: "true"
   prometheus.io/port: "{{boss__calico__felix_PrometheusMetricsPort}}"
 
-boss__calico__enable_typha: "enabled"
-boss__calico__typha_service_name: calico-typha  # or none
+boss__calico__enable_typha: "false" # false,enabled
+boss__calico__enable_prometheus_typha: "false" # false,enabled
+boss__calico__typha_service_name: "none"  # or none,calico-typha
 
-boss__calico__typha_deployment_spec_replicas: 3
+boss__calico__typha_deployment_spec_replicas: 0 # or 0,3
 
 boss__calico__typha_service_annotations: |
   prometheus.io/scrape: "true"
@@ -456,8 +465,13 @@ boss__registry__manifest_path: "{{manifest_dir_path}}/registry"
 boss__registry__namespace_name: kube-system
 boss__registry__deployment_name: registry
 boss__registry__enable_pvc: false
-boss__registry__enable_tls: true
+boss__registry__enable_tls: "enabled"
 boss__registry__tls_cert_cluster_issuer_name: selfsigning-issuer
+boss__registry__ingress_tls_config: |
+  - hosts:
+    - {{boss__registry__subdomain}}.{{domain_root}}
+    secretName: docker-registry-tls-certificate
+
 
 boss__registry__ingress_annotations: |
   traefik.frontend.rule.type: PathPrefix
@@ -560,6 +574,14 @@ boss__registry__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 boss__certmanager__manifest_path: "{{manifest_dir_path}}/cert-manager"
 boss__certmanager__namespace_name: kube-system
 boss__certmanager__example_com_namespace_name: default
+boss__certmanager__my_cluster_namespace_name: default
+boss__certmanager__my_cluster_certificate_name: wildcard-vagrantlab
+boss__certmanager__my_cluster_commonName: "*.{{domain_root}}"
+boss__certmanager__my_cluster_organization: |
+  - Vagrantlab
+boss__certmanager__my_cluster_dnsNames: |
+  - "*.{{domain_root}}"
+boss__certmanager__my_cluster_generate_tls: "force"
 
 
 ##########################################################################################################
@@ -574,88 +596,133 @@ boss__certmanager__example_com_namespace_name: default
 boss__registry__ui__subdomain: registry-ui
 boss__registry__ui__manifest_path: "{{manifest_dir_path}}/registry-ui"
 boss__registry__ui__namespace_name: default
-boss__registry__ui__deployment_name: registry-ui
+boss__registry__ui__deployment_name: docker-registry-ui
 boss__registry__ui__enable_pvc: false
-boss__registry__ui__enable_tls: true
+boss__registry__ui__enable_tls: "disabled"
+boss__registry__ui__ingress_tls_config: |
+  - hosts:
+    - {{boss__registry__ui__subdomain}}.{{domain_root}}
+    secretName: docker-registry-ui-tls-certificate
 boss__registry__ui__tls_cert_cluster_issuer_name: selfsigning-issuer
 
+boss__registry__ui__version: 0.6
+boss__registry__ui__image_repo: "joxit/docker-registry-ui"
+boss__registry__ui__image_tag: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__cpu_limit: 1000m
+boss__registry__ui__mem_limit: 500Mi
+boss__registry__ui__cpu_requests: 100m
+boss__registry__ui__mem_requests: 200Mi
+
+# joxit/docker-registry-ui:0.6
+
 boss__registry__ui__ingress_annotations: |
+  # FIXME: Fix this
+  # certmanager.k8s.io/issuer: "selfsigning-issuer"
+  # NOTE: This is what was configured in
+  nginx.ingress.kubernetes.io/proxy-body-size: "0"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  # This is what we had configured
   traefik.frontend.rule.type: PathPrefix
-  nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
-  nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+  # nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
+  # nginx.ingress.kubernetes.io/rewrite-target: \"/\"
 
 boss__registry__ui__ingress_labels: |
-  k8s-app: registry-ui
+  app: {{boss__registry__ui__deployment_name}}
+  k8s-app: {{boss__registry__ui__deployment_name}}
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  boss-part-of: registry-ui
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__service_labels: |
-    k8s-app: registry-ui
+    app: {{boss__registry__ui__deployment_name}}
+    k8s-app: {{boss__registry__ui__deployment_name}}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
     kubernetes.io/name: "KubeRegistry"
-    boss-part-of: registry-ui
+    boss-part-of: {{boss__registry__ui__deployment_name}}
     version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__service_annotations: |
+    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+    traefik.frontend.rule.type: PathPrefix
+
+boss__registry__ui__deployment_labels: |
+  app: {{boss__registry__ui__deployment_name}}
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+
+
+boss__registry__ui__deployment_spec_template_metadata_labels: |
+        app: {{boss__registry__ui__deployment_name}}
+        k8s-app: {{boss__registry__ui__deployment_name}}
+        kubernetes.io/cluster-service: "true"
+        addonmanager.kubernetes.io/mode: Reconcile
+        boss-part-of: {{boss__registry__ui__deployment_name}}
+        version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__deployment_spec_template_spec_containers_resources: |
+  requests:
+    cpu: 250m
+    memory: 64Mi
+  limits:
+    # This is 0.5 of a cpu
+    cpu: 500m
+    memory: 128Mi
 
 boss__registry__ui__persistent_volume_claim_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: registry-ui
-  boss-part-of: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__persistent_volume_claim_spec_resources_requests_storage: "2Gi"
 boss__registry__ui__persistent_volume_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: registry-ui
-  boss-part-of: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
-boss__registry__ui__version: 2.6
-boss__registry__ui__image_repo: "registry"
-boss__registry__ui__image_tag: "{{ boss__registry__ui__version }}"
-boss__registry__ui__cpu_limit: 1000m
-boss__registry__ui__mem_limit: 500Mi
-boss__registry__ui__cpu_requests: 100m
-boss__registry__ui__mem_requests: 200Mi
-
 boss__registry__ui__service_account_labels: |
-    k8s-app: registry-ui
+    k8s-app: {{boss__registry__ui__deployment_name}}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
+    boss-part-of: {{boss__registry__ui__deployment_name}}
     version: "{{ boss__registry__ui__version }}"
 boss__registry__ui__cluster_role_labels: |
-    k8s-app: registry-ui
+    k8s-app: {{boss__registry__ui__deployment_name}}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
+    boss-part-of: {{boss__registry__ui__deployment_name}}
     version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__cluster_role_binding_labels: |
-    k8s-app: registry-ui
+    k8s-app: {{boss__registry__ui__deployment_name}}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
+    boss-part-of: {{boss__registry__ui__deployment_name}}
     version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__stateful_set_labels: |
-    k8s-app: registry-ui
+    k8s-app: {{boss__registry__ui__deployment_name}}
     version: "{{ boss__registry__ui__version }}"
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
+    boss-part-of: {{boss__registry__ui__deployment_name}}
 
 boss__registry__ui__stateful_set_spec_replicas: 1
 boss__registry__ui__stateful_set_spec_selector_match_labels: |
-        k8s-app: registry-ui
+        k8s-app: {{boss__registry__ui__deployment_name}}
         version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__stateful_set_spec_template_metadata_labels: |
-        k8s-app: registry-ui
+        k8s-app: {{boss__registry__ui__deployment_name}}
         version: "{{ boss__registry__ui__version }}"
         kubernetes.io/cluster-service: "true"
 
@@ -1363,8 +1430,9 @@ boss__prometheus__operator__prometheus_additional_scrape_configs: |
       #server: ['prometheus1']
     honor_labels: true
 
+    # 217 is rpi cluster
     static_configs:
-      - targets: ['192.168.205.10:19999','192.168.205.11:19999','192.168.205.12:19999']
+      - targets: ['192.168.205.10:19999','192.168.205.11:19999','192.168.205.12:19999', '192.168.1.217:19999','192.168.1.184:19999','192.168.1.22:19999', '192.168.1.23:19999', '192.168.1.175:19999']
 
 # SOURCE: https://techtran.science/2018/06/11/unifi-to-grafana-using-prometheus-and-unifi_exporter/
 # - job_name: 'unifi_exporter'
@@ -1397,6 +1465,104 @@ boss__unifi__exporter__unifi_address: https://192.168.1.8:8443
 boss__unifi__exporter__unifi_site: Hyenanet
 boss__unifi__exporter__unifi_insecure: true
 boss__unifi__exporter__unifi_timeout: 5s
+
+
+##########################################################################################################
+#   .####.##....##.########.##.......##.....##.##.....##.########..########...........#######..########..########.########.....###....########..#######..########.
+#   ..##..###...##.##.......##.......##.....##..##...##..##.....##.##.....##.........##.....##.##.....##.##.......##.....##...##.##......##....##.....##.##.....##
+#   ..##..####..##.##.......##.......##.....##...##.##...##.....##.##.....##.........##.....##.##.....##.##.......##.....##..##...##.....##....##.....##.##.....##
+#   ..##..##.##.##.######...##.......##.....##....###....##.....##.########..#######.##.....##.########..######...########..##.....##....##....##.....##.########.
+#   ..##..##..####.##.......##.......##.....##...##.##...##.....##.##.....##.........##.....##.##........##.......##...##...#########....##....##.....##.##...##..
+#   ..##..##...###.##.......##.......##.....##..##...##..##.....##.##.....##.........##.....##.##........##.......##....##..##.....##....##....##.....##.##....##.
+#   .####.##....##.##.......########..#######..##.....##.########..########...........#######..##........########.##.....##.##.....##....##.....#######..##.....##
+##########################################################################################################
+boss__influxdb__operator__subdomain: influxdb
+boss__influxdb__operator__manifest_path: "{{manifest_dir_path}}/influxdb-operator"
+boss__influxdb__operator__namespace_name: monitoring
+boss__influxdb__operator__name: influxdata-operator
+
+
+boss__influxdb__operator__ingress_annotations: |
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+boss__influxdb__operator__ingress_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__deployment_labels: |
+  app: influxdata-operator
+  name: influxdata-operator
+
+boss__influxdb__operator__service_labels: |
+    k8s-app: influxdata-operator
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/name: "influxdata-operator"
+    name: influxdata-operator
+    boss-part-of: influxdb
+    app: influxdata-operator
+
+boss__influxdb__operator__persistent_volume_claim_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: influxdata-operator
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__persistent_volume_claim_spec_resources_requests_storage: "250Mi"
+
+boss__influxdb__operator__persistent_volume_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: influxdata-operator
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__version: 1.6.6
+boss__influxdb__operator__image_repo: "influxdb"
+boss__influxdb__operator__image_tag: "{{ boss__influxdb__operator__version }}"
+
+boss__influxdb__operator__service_account_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__cluster_role_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__cluster_role_binding_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+
+
+boss__influxdb__operator__persistent_volume_spec_capacity_storage: 250Mi
+boss__influxdb__operator__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/influxdb-operator"
+# boss__influxdb__operator__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+boss__influxdb__operator__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
 # ---
 # local_release_dir: /tmp/releases
