--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -227,9 +227,9 @@ boss__efk__elasticsearch_persistent_volume_labels: |
 boss__efk__elasticsearch_version: v5.6.2
 boss__efk__elasticsearch_image_repo: "bossjones/elasticsearch"
 boss__efk__elasticsearch_image_tag: "{{ boss__efk__elasticsearch_version }}"
-boss__efk__elasticsearch_cpu_limit: 1000m
+boss__efk__elasticsearch_cpu_limit: 1000m # same as 2 CPU
 boss__efk__elasticsearch_mem_limit: 4048Mi
-boss__efk__elasticsearch_cpu_requests: 100m
+boss__efk__elasticsearch_cpu_requests: 250m # 0.5 cpu
 boss__efk__elasticsearch_mem_requests: 2350Mi
 
 boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms2048m -Xmx2048m"
@@ -283,10 +283,10 @@ boss__efk__elasticsearch_curator_deployment_labels: |
 boss__efk__elasticsearch_curator_version: 5.3.0-1
 boss__efk__elasticsearch_curator_image_repo: "aknudsen/es-curator-service"
 boss__efk__elasticsearch_curator_image_tag: "{{ boss__efk__elasticsearch_curator_version }}"
-boss__efk__elasticsearch_curator_cpu_limit: 200m
-boss__efk__elasticsearch_curator_mem_limit: 500Mi
-boss__efk__elasticsearch_curator_cpu_requests: 100m
-boss__efk__elasticsearch_curator_mem_requests: 200Mi
+boss__efk__elasticsearch_curator_cpu_limit: 200m # 0.2 CPU limit
+boss__efk__elasticsearch_curator_mem_limit: 500Mi # 1 CPU limit
+boss__efk__elasticsearch_curator_cpu_requests: 100m # 5% cpu
+boss__efk__elasticsearch_curator_mem_requests: 200Mi #
 
 #########################
 
@@ -349,32 +349,47 @@ boss__efk__fluentd_daemon_set_spec_template_spec_securityContext: |
   privileged: true
 
 boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts: |
+  # - name: libsystemddir
+  #   mountPath: /host/lib
+  #   readOnly: true
   - name: varlog
     mountPath: /var/log
   - name: varlibdockercontainers
     mountPath: /var/lib/docker/containers
     readOnly: true
-  # - name: libsystemddir
-  #   mountPath: /host/lib
-  #   readOnly: true
   - name: config-volume
     mountPath: /etc/fluent/config.d
+  - name: docker-sock
+    mountPath: /var/run/docker.sock
+  - name: varrun
+    mountPath: /var/run
+  - name: libsystemd
+    mountPath: /usr/lib64/libsystemd.so.0
 
 boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
+  # It is needed to copy systemd library to decompress journals
+  # - name: libsystemddir
+  #   hostPath:
+  #     path: /usr/lib64
   - name: varlog
     hostPath:
       path: /var/log
   - name: varlibdockercontainers
     hostPath:
       path: /var/lib/docker/containers
-  # It is needed to copy systemd library to decompress journals
-  # - name: libsystemddir
-  #   hostPath:
-  #     path: /usr/lib64
   - name: config-volume
     configMap:
       # name: fluentd-es-config-v0.1.0
       name: fluentd-es-config-v0.1.6
+  - name: docker-sock
+    hostPath:
+      path: /var/run/docker/libcontainerd/docker-containerd.sock
+  - name: varrun
+    hostPath:
+      path: /var/run
+  - name: libsystemd
+    hostPath:
+      path: /usr/lib64/libsystemd.so.0
 
 ############################################
 
