--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -233,7 +233,17 @@ boss__efk__elasticsearch_mem_limit: 3048Mi
 boss__efk__elasticsearch_cpu_requests: 100m
 boss__efk__elasticsearch_mem_requests: 2350Mi
 
-boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms1024 -Xmx1024"
+boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms2048 -Xmx2048"
+
+boss__efk__elasticsearch_stateful_set_spec_resources: |
+  # # need more cpu upon initialization, therefore burstable class
+  # requests:
+  #   cpu: 100m
+  #   memory: 2350Mi
+  # limits:
+  #   cpu: 1000m
+  #   memory: 4048Mi
+
 boss__efk__elasticsearch_service_account_labels: |
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
