wip: rename es -> elasticsearch

--- a/extra_playbooks/roles/kubernetes-apps/efk/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/efk/tasks/main.yaml
@@ -11,10 +11,10 @@
   with_items:
     - "0elasticsearch-pvc.yaml"
     - "elasticsearch-ingress.yaml"
-    - "es-curator-secret.yaml"
-    - "es-curator.yaml"
-    - "es-service.yaml"
-    - "es-statefulset.yaml"
+    - "elasticsearch-curator-secret.yaml"
+    - "elasticsearch-curator.yaml"
+    - "elasticsearch-service.yaml"
+    - "elasticsearch-statefulset.yaml"
     - "fluentd-es-configmap.yaml"
     - "fluentd-es-ds.yaml"
     - "kibana-deployment.yaml"
